@@ -1111,19 +1111,20 @@ GID of registered download.
 
 *aria2.addTorrent* 'torrent[, uris[, options[, position]]]'
 
-This method adds BitTorrent download by uploading .torrent file.
-'torrent' is of type base64 which contains Base64-encoded .torrent
-file.  'uris' is of type array and its element is URI which is of type
-string. 'uris' is used for Web-seeding.  For single file torrents, URI
-can be a complete URI pointing to the resource or if URI ends with /,
-name in torrent file is added. For multi-file torrents, name and path
-in torrent are added to form a URI for each file.  'options' is of
-type struct and its members are a pair of option name and value. See
-*Options* below for more details.  If 'position' is given as an
-integer starting from 0, the new download is inserted at 'position' in
-the waiting queue. If 'position' is not given or 'position' is larger
-than the size of the queue, it is appended at the end of the queue.
-This method returns GID of registered download.
+This method adds BitTorrent download by uploading .torrent file.  If
+you want to add BitTorrent Magnet URI, use *aria2.addUri* method
+instead.  'torrent' is of type base64 which contains Base64-encoded
+.torrent file.  'uris' is of type array and its element is URI which
+is of type string. 'uris' is used for Web-seeding.  For single file
+torrents, URI can be a complete URI pointing to the resource or if URI
+ends with /, name in torrent file is added. For multi-file torrents,
+name and path in torrent are added to form a URI for each file.
+'options' is of type struct and its members are a pair of option name
+and value. See *Options* below for more details.  If 'position' is
+given as an integer starting from 0, the new download is inserted at
+'position' in the waiting queue. If 'position' is not given or
+'position' is larger than the size of the queue, it is appended at the
+end of the queue.  This method returns GID of registered download.
 
 *aria2.addMetalink* 'metalink[, options[, position]]'
 
